unpackaged/main/default/objects/pse__Skill__c/fields/pse__Certification_Source__c.field-meta.xml
<CustomField>
    <fullName>pse__Certification_Source__c</fullName>
    <description>Organization or institution that grants this certification.</description>
    <inlineHelpText>Organization or institution that grants this certification.</inlineHelpText>
    <label>Certification Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Microsoft</fullName>
            </value>
            <value>
                <fullName>Oracle</fullName>
            </value>
            <value>
                <fullName>Finance - AAT/Degree</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>