unpackaged/main/default/objects/pse__Skill__c/fields/pse__Group__c.field-meta.xml
<CustomField>
    <fullName>pse__Group__c</fullName>
    <description>Picklist of certification groups.</description>
    <inlineHelpText>Picklist of certification groups.</inlineHelpText>
    <label>Group</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Jeeves ERP Customization</fullName>
            </value>
            <value>
                <fullName>Jeeves ERP Finance</fullName>
            </value>
            <value>
                <fullName>Jeeves ERP Infrastructure &amp; Cloud</fullName>
            </value>
            <value>
                <fullName>Jeeves ERP Manufacturing</fullName>
            </value>
            <value>
                <fullName>Jeeves ERP Supply Chain</fullName>
            </value>
            <value>
                <fullName>Jeeves ERP JAPP</fullName>
            </value>
            <value>
                <fullName>Jeeves ERP General</fullName>
            </value>
            <value>
                <fullName>Jeeves ERP Role</fullName>
            </value>
            <value>
                <fullName>BPSC ERP Finance</fullName>
            </value>
            <value>
                <fullName>BPSC ERP SCM</fullName>
            </value>
            <value>
                <fullName>BPSC ERP WMS</fullName>
            </value>
            <value>
                <fullName>BPSC ERP HR</fullName>
            </value>
            <value>
                <fullName>BPSC ERP Manufacturing</fullName>
            </value>
            <value>
                <fullName>BPSC ERP PM/SysWag</fullName>
            </value>
            <value>
                <fullName>BPSC ERP ADM/Reps</fullName>
            </value>
            <value>
                <fullName>Oracle</fullName>
            </value>
            <value>
                <fullName>Delphi</fullName>
            </value>
            <value>
                <fullName>Crystal Reports</fullName>
            </value>
            <value>
                <fullName>.NET</fullName>
            </value>
            <value>
                <fullName>C#</fullName>
            </value>
            <value>
                <fullName>mySQL SysWag</fullName>
            </value>
            <value>
                <fullName>Java</fullName>
            </value>
            <value>
                <fullName>Spring Boot</fullName>
            </value>
            <value>
                <fullName>MS Windows Srv</fullName>
            </value>
            <value>
                <fullName>Linux Srv</fullName>
            </value>
            <value>
                <fullName>Cloud AWS</fullName>
            </value>
            <value>
                <fullName>Cloud Azure</fullName>
            </value>
            <value>
                <fullName>SQL</fullName>
            </value>
            <value>
                <fullName>PL/SQL</fullName>
            </value>
            <value>
                <fullName>BPSC ERP Insta/Upgr</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>