unpackaged/main/default/objects/pse__Skill__c/fields/pse__Type__c.field-meta.xml
<CustomField>
    <fullName>pse__Type__c</fullName>
    <description>Set of skill types. Used when grouping skills capacity reports.</description>
    <inlineHelpText>Set of skill types. Used when grouping skills capacity reports.</inlineHelpText>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>abas ERP</fullName>
            </value>
            <value>
                <fullName>BPSC ERP</fullName>
            </value>
            <value>
                <fullName>Business Analysis</fullName>
            </value>
            <value>
                <fullName>DMS</fullName>
            </value>
            <value>
                <fullName>Industry</fullName>
            </value>
            <value>
                <fullName>Jeeves ERP</fullName>
            </value>
            <value>
                <fullName>Languages</fullName>
            </value>
            <value>
                <fullName>OrderWise ERP</fullName>
            </value>
            <value>
                <fullName>Programming</fullName>
            </value>
            <value>
                <fullName>Project Management</fullName>
            </value>
            <value>
                <fullName>Soft Skills</fullName>
            </value>
            <value>
                <fullName>SQL</fullName>
            </value>
            <value>
                <fullName>Strategy</fullName>
            </value>
            <value>
                <fullName>Technical &amp; Architecture</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>