unpackaged/main/default/objects/pse__Skill__c/recordTypes/pse__Skill.recordType-meta.xml
<RecordType>
    <fullName>pse__Skill</fullName>
    <active>true</active>
    <description>An ability, proficiency, or expertise, in a subject area.</description>
    <label>Skill</label>
</RecordType>