unpackaged/main/default/objects/pse__Skill__c/listViews/JVS_Jeeves_ERP_Skills.listView-meta.xml
<ListView>
    <fullName>JVS_Jeeves_ERP_Skills</fullName>
    <columns>NAME</columns>
    <columns>pse__Group__c</columns>
    <columns>pse__Type__c</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>pse__Type__c</field>
        <operation>contains</operation>
        <value>Jeeves ERP</value>
    </filters>
    <label>JVS Jeeves ERP Skills</label>
    <sharedTo>
        <roleAndSubordinatesInternal>Services_Jeeves</roleAndSubordinatesInternal>
    </sharedTo>
</ListView>